Cherry-pick r252847. rdar://problem/58414545

REGRESSION (Safari 13): WebSocket payload is truncated when x-webkit-deflate-frame is used
    https://bugs.webkit.org/show_bug.cgi?id=202401
    <rdar://problem/55922632>

    Reviewed by Alex Christensen.

    Source/WebCore:

    Test: http/tests/websocket/tests/hybi/deflate-extension.html

    * Modules/websockets/WebSocketDeflater.cpp:
    (WebCore::WebSocketDeflater::finish):
    Make sure to continue calling deflate until all output data is flushed.

    LayoutTests:

    * http/tests/websocket/tests/hybi/deflate-extension-expected.txt: Added.
    * http/tests/websocket/tests/hybi/deflate-extension.html: Added.

    Canonical link: https://commits.webkit.org/217822@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252847 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.578@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@254217 268f45cc-cd09-0410-ab3c-d52691b4dbfc